# Voyage-Voyage

./: .env.example  .gitignore  PR_DESCRIPTION.md  README.md  docker-compose.yml  requirements.txt
backend/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_db_connection.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_12_07_0258_create_users_and_oauth_credentials_tables.py  2025_12_07_0646_add_oauth_states_table.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  picker.py
backend/app/api/routes/: health.py
backend/app/core/: config.py  database.py  dependencies.py  encryption.py  jwt.py  oauth.py  oauth_state.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  oauth_credential.py  oauth_state.py  user.py
backend/app/services/: google_photos.py  picker_api.py
docs/: KNOWN_ISSUES.md  PHOTOS_API_CHANGES.md  agent-guidelines.md  api-examples.md  api.md  implementation-log.md  implementation-plan.md  logo.ai  prd.md  technical-spec.md
frontend/: README.md
ops/: accounts.md  oauth-setup.md
