[project]
name = "voyage-voyage"
version = "0.1.0"
description = "Transform messy Google Photos trip albums into clean, cinematic, curated experiences"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "cryptography>=41.0.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

